syntax = "proto3";

package orderbook;

// Interface exported by the server.
service OrderBookAggregator {
  rpc PushBinance (stream OrderBook) returns (Empty) {}
  rpc PushBitstamp (stream OrderBook) returns (Empty) {}
  rpc BookSummary(Empty) returns (stream Summary) {}
}

message OrderBook {
  repeated Level bids = 2;
  repeated Level asks = 3;
}

message Summary {
  optional double spread = 1;
  repeated Level bids = 2;
  repeated Level asks = 3;
}

message Level {
  string exchange = 1;
  double price = 2;
  double amount = 3;
}

message Empty {

}
